# dml-language-server

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  SECURITY.md  clients.md  deny.toml
.github/: dependabot.yml
.github/workflows/: binaries.yml  rust.yml  scans.yml
example_files/: example_lint_cfg.README  example_lint_cfg.json
src/: cmd.rs  concurrency.rs  config.rs  file_management.rs  lib.rs  lsp_data.rs  main.rs  utility.rs
src/actions/: analysis_queue.rs  analysis_storage.rs  hover.rs  mod.rs  notifications.rs  progress.rs  requests.rs  work_pool.rs
src/analysis/: mod.rs  provisionals.rs  reference.rs  scope.rs  symbols.rs
src/analysis/parsing/: expression.rs  lexer.rs  misc.rs  mod.rs  parser.rs  statement.rs  structure.rs  tree.rs  types.rs
src/analysis/structure/: expressions.rs  mod.rs  objects.rs  statements.rs  toplevel.rs  types.rs
src/analysis/templating/: methods.rs  mod.rs  objects.rs  topology.rs  traits.rs  types.rs
src/dfa/: client.rs  main.rs  mod.rs
src/lint/: README.md  features.md  mod.rs
src/lint/rules/: indentation.rs  mod.rs  spacing.rs
src/lint/rules/test/: common.rs  mod.rs
src/lint/rules/test/indentation/: in5.rs  mod.rs
src/lint/rules/tests/: common.rs  mod.rs
src/lint/rules/tests/indentation/: in10.rs  in2.rs  in3.rs  in5.rs  in6.rs  in9.rs  mod.rs
src/lint/rules/tests/spacing/: mod.rs
src/server/: dispatch.rs  io.rs  message.rs  mod.rs
src/span/: mod.rs
src/test/: mod.rs
src/vfs/: mod.rs  test.rs
